@@ -7,7 +7,9 @@
 	    more flexibility to report what they support and what not
       - Teradata:
 	    - raise validation error on adding/dropping primary keys (Teradata does not support that)
-		- removed MINVALUE and MAXVALUE for identity column which is not needed and caused unexpected errors
+	  - BUG FIXES:
+	    - SQL Server 2005/2008: rename default constraint along with the column (fixes the case when adding a new column with a default value which has the same name of a previously renamed column with a default value)
+		- Teradata: removed MINVALUE and MAXVALUE for identity columns which is not needed and caused unexpected errors
 1.0.1 - BUG FIXES:
 	    - Oracle: multiple Mig# instances can be maintained side-by-side on the same database
 		- SQL Tracing: do not throw if the emitted SQL contains curly brackets
